<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".login_Activity">


    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back_ios" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="103dp"
        android:layout_height="86dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_symbol_colour" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/study_aboard"
        android:textColor="@color/primarycolor"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_heading"
        android:textColor="@color/heading_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_hint_text"
        android:textColor="@color/hint_color"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_code"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:gravity="center"
        app:ccp_autoDetectCountry="true"
        app:ccp_defaultNameCode="IND"
        app:ccp_showFlag="true"
        android:layout_weight="1"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="true"
        app:layout_constraintBottom_toBottomOf="@+id/mobilenumberlayour"
        app:layout_constraintStart_toStartOf="@+id/mobilenumberlayour"
        app:layout_constraintTop_toTopOf="@+id/mobilenumberlayour"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobilenumberlayour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:hint="Mobile Number"
        android:textColorHint="@color/hint_color"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:paddingStart="50dp"
        app:boxCornerRadiusTopStart="8dp"
        app:prefixText="+91"
        app:boxStrokeColor="@color/primarycolor"
        app:hintTextColor="@color/primarycolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:prefixTextColor="@color/primarycolor">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobilenumbertext"
            android:textColor="@color/text_color"
            android:inputType="number"
            android:maxLength="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendotpbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:elevation="7dp"
        android:text="Send OTP"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobilenumberlayour" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/policy_text"
        android:textColorHighlight="@color/hint_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/sendotpbutton"
        app:layout_constraintStart_toStartOf="@+id/sendotpbutton"
        app:layout_constraintTop_toBottomOf="@+id/sendotpbutton" />
</androidx.constraintlayout.widget.ConstraintLayout>