<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/scorelinearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oswald"
                android:text="@string/reading"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/RLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/hint_color"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primarycolor"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:prefixTextColor="@color/primarycolor">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/readinginput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oswald"
                android:text="@string/listening"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/listeninglayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primarycolor"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listeninginput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oswald"
                android:text="@string/overall"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Overlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primarycolor"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/overallinput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oswald"
                android:text="@string/writing"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wlayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primarycolor"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/writinginput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oswald"
                android:text="@string/speaking"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/slayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/primarycolor"
                app:hintEnabled="false">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/speakinginput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:padding="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/hint_color" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>