<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="16dp"

                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/reading_icon"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/reading"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/ptereadinglayout"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/primarycolor"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:prefixTextColor="@color/primarycolor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ptereadinginput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="0"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/writing_icon"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/writing"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="8dp"
                    android:id="@+id/ptewritinglayout"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/primarycolor"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:prefixTextColor="@color/primarycolor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ptewritinginput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="0"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/listening_icon"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/listening"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/ptelisteninglayout"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/primarycolor"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:prefixTextColor="@color/primarycolor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/ptelisteninginput"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="0"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/speaking_icon"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/speaking"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:boxBackgroundColor="@color/white"
                    android:id="@+id/ptespeakinglayout"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/primarycolor"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:prefixTextColor="@color/primarycolor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/ptespeakinginput"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="0"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/overall_icon"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/overall"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/pteoveralllayout"
                    app:boxBackgroundColor="@color/white"
                    android:textColorHint="@color/hint_color"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/primarycolor"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:prefixTextColor="@color/primarycolor">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:hint="0"
                        android:id="@+id/pteoverallinput"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/hint_color" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>